pagebuilder/overlays/prod/traefik/ingress-virtocomposer.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: virtocomposer-ingress-http
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: prod-errorpage@kubernetescrd, argocd-https-redirect@kubernetescrd
spec:
  rules:
  - host: virtocomposer.com
    http:
      paths:
      - backend:
          serviceName: storefront
          servicePort: 80
        path: /
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: virtocomposer-ingress-https
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: prod-errorpage@kubernetescrd, argocd-https-redirect@kubernetescrd
    cert-manager.io/cluster-issuer: letsencrypt-wild-composer
spec:
  tls:
    - hosts:   
      - "virtocomposer.com"
      secretName: wildcard-virtocomposer
  rules:
  - host: virtocomposer.com
    http:
      paths:
      - backend:
          serviceName: storefront
          servicePort: 80
        path: /
