pagebuilder/overlays/prod/traefik/ingress-www.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-ingress-http
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: prod-errorpage@kubernetescrd, argocd-https-redirect@kubernetescrd
spec:
  rules:
  - host: "*.eastus.composer.govirto.com"
    http:
      paths:
      - backend:
          serviceName: storefront
          servicePort: 80
        path: /
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-ingress-https
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: prod-errorpage@kubernetescrd, argocd-https-redirect@kubernetescrd
    cert-manager.io/cluster-issuer: letsencrypt-wild
spec:
  tls:
    - hosts:   
      - "*.eastus.composer.govirto.com"
      secretName: wildcard-domain-tls-secret-composer
  rules:
  - host: "*.eastus.composer.govirto.com"
    http:
      paths:
      - backend:
          serviceName: storefront
          servicePort: 80
        path: /
