pagebuilder/overlays/prod/traefik/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-ingress-http
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: prod-errorpage@kubernetescrd
spec:
  rules:
  - host: "*.eastus.composer.govirto.com"
    http:
      paths:
      - backend:
          serviceName: storefront
          servicePort: 80
        path: /
  - host: $(VC_PLATFORM_SERVICE).$(VC_NAMESPACE).govirto.com
    http:
      paths:
      - backend:
          serviceName: platform
          servicePort: 80
        path: /
